[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/import/holz_drehmaschineFBX.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/CraftingSpot.gd" type="Script" id=2]
[ext_resource path="res://scenes/items/WoodChest.tscn" type="PackedScene" id=3]




[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.544742, 1.06801, 1.98877 )

[node name="TurningBench" type="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0 )
mass = 359.9
script = ExtResource( 2 )
recipe_scene = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.546053, 0 )
shape = SubResource( 1 )

[node name="holz_drehmaschineFBX" parent="." instance=ExtResource( 1 )]

[node name="HoldingPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.86439, 0 )

[node name="CraftingTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="CraftingTimer" to="." method="_on_CraftingTimer_timeout"]
