[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/import/standsaegeGLTF.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/CraftingSpot.gd" type="Script" id=2]
[ext_resource path="res://scenes/items/Woodplank.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/particle/SmokeEffect.tscn" type="PackedScene" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 1.13153, 0.746244 )

[sub_resource type="SphereShape" id=2]
radius = 1.2921

[node name="WoodSaw" type="RigidBody"]
script = ExtResource( 2 )
recipe_scene = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.04992, 0 )
shape = SubResource( 1 )

[node name="HoldingPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.663149, 0.678735, 0 )

[node name="SmokeEffect" parent="HoldingPosition" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00524104, 0.04111, -0.00189769 )
visible = false

[node name="CatchZone" type="Area" parent="HoldingPosition"]

[node name="CatchShape" type="CollisionShape" parent="HoldingPosition/CatchZone"]
shape = SubResource( 2 )

[node name="CraftingTimer" type="Timer" parent="."]
one_shot = true

[node name="standsaegeGLTF" parent="." instance=ExtResource( 1 )]

[node name="ResetTimer" type="Timer" parent="."]
one_shot = true
